# tweet-sentiment-analysis

./: .env.example  .gitignore  APIFY_SETUP.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  GITHUB_DEPLOYMENT_STEPS.md  LICENSE  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  docker-compose.yml  index.html  netlify.toml  render.yaml  sentiment_predictor.py  test_zendriver.py  tweet_fetcher.py  tweet_scraper.py
.github/workflows/: deploy.yml
models/: Sentiment-LR.pickle
src/: main.rs  models.rs  sentiment.rs  twitter.rs
