[package]
name = "sentiment-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1"
